--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <span>TikTok</span>
       </div>
       <div class="platform-box">
-        <img src="ICONS/instagram.png" alt="Instagram" />
+        <img src="ICONS/insta.png" alt="Instagram" />
         <span>Instagram</span>
       </div>
       <div class="platform-box">
