--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="style.css" />
   <script src="script.js" defer></script>
 </head>
-<body class="dark">  <!-- 🌙 Dark Mode Toggle --><button id="darkToggle" class="chat-style-button">🌓</button>
+<body style="background-color: #000;">  <!-- 🌙 Dark Mode Toggle --><button id="darkToggle" class="animated-chat-toggle">🌙</button>
 
   <!-- 👋 Hero Section -->  <section class="hero">
     <div class="hero-content">
@@ -35,26 +35,11 @@
   </div>  <!-- 🎥 App Platforms -->  <section class="platforms">
     <h2 class="glow-title">Supported Platforms</h2>
     <div class="app-icons">
-      <div class="platform-box">
-        <img src="ICONS/tiktok.png" alt="TikTok" />
-        <span>TikTok</span>
-      </div>
-      <div class="platform-box">
-        <img src="ICONS/insta.png" alt="Instagram" />
-        <span>Instagram</span>
-      </div>
-      <div class="platform-box">
-        <img src="ICONS/youtube.png" alt="YouTube" />
-        <span>YouTube</span>
-      </div>
-      <div class="platform-box">
-        <img src="ICONS/facebook.png" alt="Facebook" />
-        <span>Facebook</span>
-      </div>
-      <div class="platform-box">
-        <img src="ICONS/twitter.png" alt="Twitter" />
-        <span>Twitter</span>
-      </div>
+      <div class="platform-box"><img src="ICONS/tiktok.png" alt="TikTok" /><span>TikTok</span></div>
+      <div class="platform-box"><img src="ICONS/instagram.png" alt="Instagram" /><span>Instagram</span></div>
+      <div class="platform-box"><img src="ICONS/youtube.png" alt="YouTube" /><span>YouTube</span></div>
+      <div class="platform-box"><img src="ICONS/facebook.png" alt="Facebook" /><span>Facebook</span></div>
+      <div class="platform-box"><img src="ICONS/twitter.png" alt="Twitter" /><span>Twitter</span></div>
     </div>
   </section>  <!-- 📲 App Install Section -->  <section class="install-app">
     <h2 class="glow-title">Get Our App</h2>
@@ -103,7 +88,7 @@
       <a href="#" onclick="alert('Privacy Policy Opened')">🔐 Privacy</a>
       <a href="mailto:monsterjack901@gmail.com">📧 monsterjack901@gmail.com</a>
     </div>
-    <p class="powered">🚩 Powered by Monster Jack</p>
+    <p class="powered">Powered by Monster Jack 🚩</p>
   </footer>  <!-- 💬 Support Button --><button id="supportBtn">💬</button>
 
 </body>
