--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <h2 class="glow-title">Supported Platforms</h2>
     <div class="app-icons">
       <div class="platform-box"><img src="ICONS/tiktok.png" alt="TikTok" /><span>TikTok</span></div>
-      <div class="platform-box"><img src="ICONS/instagram.png" alt="Instagram" /><span>Instagram</span></div>
+      <div class="platform-box"><img src="ICONS/insta.png" alt="Instagram" /><span>Instagram</span></div>
       <div class="platform-box"><img src="ICONS/youtube.png" alt="YouTube" /><span>YouTube</span></div>
       <div class="platform-box"><img src="ICONS/facebook.png" alt="Facebook" /><span>Facebook</span></div>
       <div class="platform-box"><img src="ICONS/twitter.png" alt="Twitter" /><span>Twitter</span></div>
